Add extension capture match indicator
